2007-10-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (enum Lisp_Misc_Type): Del Lisp_Misc_Some_Buffer_Local_Value.
	(XMISCANY): New macro.
	(XMISCTYPE): Use it.
	(struct Lisp_Misc_Any): New type.
	(union Lisp_Misc): Use it.
	(struct Lisp_Buffer_Local_Value): Add `local_if_set' bit.
	* data.c (Fboundp, store_symval_forwarding, swap_in_global_binding)
	(find_symbol_value, set_internal, default_value, Fset_default)
	(Fmake_variable_buffer_local, Fmake_local_variable)
	(Fkill_local_variable, Fmake_variable_frame_local, Flocal_variable_p)
	(Flocal_variable_if_set_p, Fvariable_binding_locus):
	The SOME_BUFFER_LOCAL_VALUEP distinction is replaced by local_if_set.
	* alloc.c (allocate_buffer): Set the size and tag.
	(allocate_misc, mark_maybe_object, mark_object, survives_gc_p):
	Use XMISCANY.
	(die): Follow the GNU convention for error messages.
	* print.c (print_object): SOME_BUFFER_LOCAL_VALUEP -> local_if_set.
	* buffer.c (Fget_buffer_create, Fmake_indirect_buffer): Don't set the
	tag any more.
	(set_buffer_internal_1):
	* frame.c (store_frame_param):
	* eval.c (specbind):
	* xdisp.c (select_frame_for_redisplay): Drop SOME_BUFFER_LOCAL_VALUEP.

	* doc.c (Fsnarf_documentation): Simplify.

2007-10-14  Juanma Barranquero  <lekktu@gmail.com>

	* w32term.c (w32_font_is_double_byte, my_create_scrollbar): Make static.
	(syms_of_w32term) <w32-enable-unicode-output>: Fix typo in docstring.

2007-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (Fmake_indirect_buffer): Set the buffer's tag.

2007-10-14  Juanma Barranquero  <lekktu@gmail.com>

	* eval.c (do_autoload): Don't save autoloads.

	* data.c (Ffset): Save autoload of the function being set.

2007-10-07  John Paul Wallington  <jpw@pobox.com>

	* xfns.c (x_create_tip_frame): Set the `display-type' frame
	parameter before setting up faces.

2007-10-13  Eli Zaretskii  <eliz@gnu.org>

	* ccl.c (Fregister_code_conversion_map):
	* keyboard.c (append_tool_bar_item): Reformat last change.
